Ajout des liens pour fonts

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Accueil</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://use.typekit.net/ntp5xxm.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <title>Accueil</title>
+    </head>
+    <body>
+        <img class="decors" src="img/Decore.svg" alt="">
+        <nav>
+            <div class="bigBox">
+                <div class="smallBox">
+                    <img src="img/Logologo_jadoo.png" alt="">
+                </div>
+                <div class="smallBox">
+                    <a href="">Destination</a>
+                    <a href="">Hotels</a>
+                    <a href="">Flights</a>
+                    <a href="">Bookings</a>
+                    <a href="">Login</a>
+                    <a href="">Sign up</a>
+                </div>
+            </div>
+        </nav>
+    </body>
 </html>
