--- a/index.html
+++ b/index.html
@@ -14,19 +14,55 @@
     <body>
         <img class="decors" src="img/Decore.svg" alt="">
         <nav>
-            <div class="bigBox">
-                <div class="smallBox">
-                    <img src="img/Logologo_jadoo.png" alt="">
-                </div>
-                <div class="smallBox">
-                    <a href="">Destination</a>
-                    <a href="">Hotels</a>
-                    <a href="">Flights</a>
-                    <a href="">Bookings</a>
-                    <a href="">Login</a>
-                    <a href="">Sign up</a>
-                </div>
+            <div class="smallBox">
+                <img src="img/Logologo_jadoo.png" alt="">
+            </div>
+            <div>
+                <a href="">Destination</a>
+                <a href="">Hotels</a>
+                <a href="">Flights</a>
+                <a href="">Bookings</a>
+                <a href="">Login</a>
+                <a href="">Sign up</a>
+                <a href="">EN V</a>
             </div>
         </nav>
+        <header>
+            <div class="bigBox">
+                <div class="smallBox">
+                    <h2>
+                        Best Destinations around the world
+                    </h2>
+                    <h1>
+                        Travel, enjoy
+                        <br>
+                        and live a new
+                        <br>
+                        and full life
+                    </h1>
+                    <p>
+                        Built Wicket longer admire do barton vanity itself do in it. Preferred to sportsmen it engrossed listening. Park gate sell they west hard for the.
+                    </p>
+                    <div class="smallBox-button">
+                        <button>
+                            <a href="">
+                                Find out more
+                            </a>
+                        </button>
+                        <div class="test">
+                            <a href="">
+                                <img src="img/buttonplay.svg" alt="">
+                            </a>
+                            <a href="">
+                                Play now
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="smallBox">
+                    <img src="img/Imageheader_femme.png" alt="">
+                </div>
+            </div>
+        </header>
     </body>
 </html>
