Fix button play now and finish header

--- a/index.html
+++ b/index.html
@@ -49,12 +49,9 @@
                                 Find out more
                             </a>
                         </button>
-                        <div class="test">
+                        <div class="debug">
                             <a href="">
-                                <img src="img/buttonplay.svg" alt="">
-                            </a>
-                            <a href="">
-                                Play now
+                                <img src="img/Play Demo.svg" alt="">
                             </a>
                         </div>
                     </div>
