ajout du hover nav

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         Best Destinations around the world
                     </h2>
                     <h1>
-                        Travel, enjoy
+                        Travel, <b>enjoy</b>
                         <br>
                         and live a new
                         <br>
