Avancement section category

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                         Best Destinations around the world
                     </h2>
                     <h1>
-                        Travel, <b>enjoy</b>
+                        Travel,
+                        <b>enjoy</b>
                         <br>
                         and live a new
                         <br>
@@ -61,5 +62,24 @@
                 </div>
             </div>
         </header>
+        <main>
+            <section>
+                <h2>Category</h2>
+                <h1>We Offer Best Services</h1>
+                <div class="bigBoxCategory">
+                    <div class="smallBoxCategory">
+                        <img class="icone" src="img/satelite.png" alt="">
+                        <p class="titleCategory">
+                            <strong>
+                                Calculated Weather
+                            </strong>
+                        </p>
+                        <p>
+                            Built Wicket longer admire do barton vanity itself do in it.
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
