Avancée deuxieme block

--- a/index.html
+++ b/index.html
@@ -78,6 +78,39 @@
                             Built Wicket longer admire do barton vanity itself do in it.
                         </p>
                     </div>
+                    <div class="smallBoxCategory">
+                        <img class="icone" src="img/avion.png" alt="">
+                        <p class="titleCategory">
+                            <strong>
+                                Best Flights
+                            </strong>
+                        </p>
+                        <p>
+                            Engrossed listening. Park gate sell they west hard for the.
+                        </p>
+                    </div>
+                    <div class="smallBoxCategory">
+                        <img class="icone" src="img/micro.png" alt="">
+                        <p class="titleCategory">
+                            <strong>
+                                Local Events
+                            </strong>
+                        </p>
+                        <p>
+                            Barton vanity itself do in it. Preferd to men it engrossed listening.
+                        </p>
+                    </div>
+                    <div class="smallBoxCategory">
+                        <img class="icone" src="img/custom.png" alt="">
+                        <p class="titleCategory">
+                            <strong>
+                                Customization
+                            </strong>
+                        </p>
+                        <p>
+                            We deliver outsourced aviation services for military customers
+                        </p>
+                    </div>
                 </div>
             </section>
         </main>
