--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </header>
         <main>
-            <section>
+            <section class="decorationCross">
                 <h2>Category</h2>
                 <h1>We Offer Best Services</h1>
                 <div class="bigBoxCategory">
@@ -111,6 +111,15 @@
                             We deliver outsourced aviation services for military customers
                         </p>
                     </div>
+                </div>
+            </section>
+            <section>
+                <h2>Top Selling</h2>
+                <h1>Top Destinations</h1>
+                <div class="bigBox bigBox-destination">
+                        <img src="img/Destinationrome.svg" alt="">
+                        <img src="img/Destinationlondon.svg" alt="">
+                        <img src="img/Destinationeurope.svg" alt="">
                 </div>
             </section>
         </main>
