--- a/index.html
+++ b/index.html
@@ -117,11 +117,50 @@
                 <h2>Top Selling</h2>
                 <h1>Top Destinations</h1>
                 <div class="bigBox bigBox-destination">
-                        <img src="img/Destinationrome.svg" alt="">
-                        <img src="img/Destinationlondon.svg" alt="">
-                        <img src="img/Destinationeurope.svg" alt="">
+                    <img src="img/Destinationrome.svg" alt="">
+                    <img src="img/Destinationlondon.svg" alt="">
+                    <img src="img/Destinationeurope.svg" alt="">
                 </div>
             </section>
         </main>
+        <footer>
+            <div class="bigBox">
+                <div class="smallBoxFooter">
+                    <h1>
+                        Jadoo
+                    </h1>
+                    <p class="txtSmall">
+                        Book your trip in minute, get full<br> Control for much longer.
+                    </p>
+                </div>
+                <div class="smallBoxFooter">
+                    <h2>
+                        Compagny
+                    </h2>
+                    <a href="">About</a>
+                    <a href="">Carrers</a>
+                    <a href="">Mobile</a>
+                </div>
+                <div class="smallBoxFooter">
+                    <h2>
+                        Contact
+                    </h2>
+                    <a href="">Help/FAQ</a>
+                    <a href="">Press</a>
+                    <a href="">Affilates</a>
+                </div>
+                <div class="smallBoxFooter">
+                    <h2>
+                        More
+                    </h2>
+                    <a href="">Airlinefees</a>
+                    <a href="">Airline</a>
+                    <a href="">Low fare Tips</a>
+                </div>
+            </div>
+            <p class="txtSmall txtSmall-copyright">
+                All rights reserved@jadoo.co
+            </p>
+        </footer>
     </body>
 </html>
