--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
                         Jadoo
                     </h1>
                     <p class="txtSmall">
-                        Book your trip in minute, get full<br> Control for much longer.
+                        Book your trip in minute, get full
+                        <br>
+                        Control for much longer.
                     </p>
                 </div>
                 <div class="smallBoxFooter">
@@ -156,6 +158,20 @@
                     <a href="">Airlinefees</a>
                     <a href="">Airline</a>
                     <a href="">Low fare Tips</a>
+                </div>
+                <div class="smallBoxFooter">
+                    <div class="buttonsocial">
+                        <img src="img/Socialfacebook.png" alt="">
+                        <img src="img/Socialinstagram.png" alt="">
+                        <img src="img/Socialtwitter.png" alt="">
+                    </div>
+                    <h2>
+                        Discover our app
+                    </h2>
+                    <div class="buttonsocial">
+                        <img src="img/Google Playgoogleplay.png" alt="">
+                        <img src="img/PlayStoreapplestore.png" alt="">
+                    </div>
                 </div>
             </div>
             <p class="txtSmall txtSmall-copyright">
