debut fix figcaption

--- a/index.html
+++ b/index.html
@@ -114,12 +114,26 @@
                 </div>
             </section>
             <section>
+                <img class="decorationFlower" src="img/Decore_topdestination.png" alt="">
                 <h2>Top Selling</h2>
                 <h1>Top Destinations</h1>
                 <div class="bigBox bigBox-destination">
-                    <img src="img/Destinationrome.svg" alt="">
+                    <!-- <img src="img/Destinationrome.svg" alt="">
                     <img src="img/Destinationlondon.svg" alt="">
-                    <img src="img/Destinationeurope.svg" alt="">
+                    <img src="img/Destinationeurope.svg" alt=""> -->
+                    <figure>
+                        <img src="img/rome.jpg" alt="">
+                        <figcaption>
+                            <div class="smallBoxCaption">
+                                <h1>Rome, Italy</h1>
+                                <p>$5,42k</p>
+                            </div>
+                            <div class="smallBoxCaption">
+                                <img src="img/navigation.svg" alt="">
+                                <p> 10 days Trips</p>
+                            </div>
+                        </figcaption>
+                    </figure>
                 </div>
             </section>
         </main>
