--- a/index.html
+++ b/index.html
@@ -118,19 +118,42 @@
                 <h2>Top Selling</h2>
                 <h1>Top Destinations</h1>
                 <div class="bigBox bigBox-destination">
-                    <!-- <img src="img/Destinationrome.svg" alt="">
-                    <img src="img/Destinationlondon.svg" alt="">
-                    <img src="img/Destinationeurope.svg" alt=""> -->
                     <figure>
                         <img src="img/rome.jpg" alt="">
                         <figcaption>
                             <div class="smallBoxCaption">
                                 <h1>Rome, Italy</h1>
-                                <p>$5,42k</p>
+                                <p class="calltoaction">$5,42k</p>
                             </div>
-                            <div class="smallBoxCaption">
-                                <img src="img/navigation.svg" alt="">
+                            <div class="smallBoxCaption smallBoxCaption-nav">
+                                <img class="nav" src="img/navigation.svg" alt="">
                                 <p> 10 days Trips</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/London.jpg" alt="">
+                        <figcaption>
+                            <div class="smallBoxCaption">
+                                <h1>London, UK</h1>
+                                <p class="calltoaction">$4.2k</p>
+                            </div>
+                            <div class="smallBoxCaption smallBoxCaption-nav">
+                                <img class="nav" src="img/navigation.svg" alt="">
+                                <p> 12 days Trips</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/europe.jpg" alt="">
+                        <figcaption>
+                            <div class="smallBoxCaption">
+                                <h1>Full Europe</h1>
+                                <p class="calltoaction">$15k</p>
+                            </div>
+                            <div class="smallBoxCaption smallBoxCaption-nav">
+                                <img class="nav" src="img/navigation.svg" alt="">
+                                <p> 28 days Trips</p>
                             </div>
                         </figcaption>
                     </figure>
