Ajout des liens sur les icones de réseau social dans le footer

--- a/index.html
+++ b/index.html
@@ -198,16 +198,16 @@
                 </div>
                 <div class="smallBoxFooter">
                     <div class="buttonsocial">
-                        <img src="img/Socialfacebook.png" alt="">
-                        <img src="img/Socialinstagram.png" alt="">
-                        <img src="img/Socialtwitter.png" alt="">
+                        <a href=""><img src="img/Socialfacebook.png" alt=""></a>
+                        <a href=""><img src="img/Socialinstagram.png" alt=""></a>
+                        <a href=""><img src="img/Socialtwitter.png" alt=""></a>
                     </div>
                     <h2>
                         Discover our app
                     </h2>
                     <div class="buttonsocial">
-                        <img src="img/Google Playgoogleplay.png" alt="">
-                        <img src="img/PlayStoreapplestore.png" alt="">
+                        <a href=""><img src="img/Google Playgoogleplay.png" alt=""></a>
+                        <a href=""><img src="img/PlayStoreapplestore.png" alt=""></a>
                     </div>
                 </div>
             </div>
